# nrf24_esb

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
lib/esb/: CMakeLists.txt  esb.c  esb.h  esb_utils.c  esb_utils.h
prx/: CMakeLists.txt  main.c
ptx/: CMakeLists.txt  main.c
